# Email-Spam-Detector

./: main.ipynb  pyproject.toml
